adjusted flight stories and vision